--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -143,6 +143,9 @@
     "Marcar asistencia" : "Marcar asistencia",
     "Quitar QR" : "Quitar QR",
 
-    "Asistencia": "Asistencia"
+    "Asistencia": "Asistencia",
 
+    "Estás a ": "Estás a ", " metros de la sala" : " metros de la sala",
+    "Puedes marcar asistencia." :"Puedes marcar asistencia.",
+    "Estás muy lejos, no puedes marcar asistencia." :"Estás muy lejos, no puedes marcar asistencia."
 }
