--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -147,5 +147,6 @@
 
     "Estás a ": "Estás a ", " metros de la sala" : " metros de la sala",
     "Puedes marcar asistencia." :"Puedes marcar asistencia.",
-    "Estás muy lejos, no puedes marcar asistencia." :"Estás muy lejos, no puedes marcar asistencia."
+    "Estás muy lejos, no puedes marcar asistencia." :"Estás muy lejos, no puedes marcar asistencia.",
+    "Registrar docente" : "Registrar docente"
 }
