--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">RegistrAPP</string>
     <string name="title_activity_main">RegistrAPP</string>
-    <string name="package_name">cl.duoc.registrapp</string>
-    <string name="custom_url_scheme">cl.duoc.registrapp</string>
+    <string name="package_name">cl.duoc.app</string>
+    <string name="custom_url_scheme">cl.duoc.app</string>
 </resources>
