--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -147,5 +147,9 @@
     "Estás a ": "You are  ", " metros de la sala" : " meters from the classroom",
     "Puedes marcar asistencia." :"You can mark assistance.",
     "Estás muy lejos, no puedes marcar asistencia." :"You are too far away, you can't mark assistance.",
-    "Registrar docente" : "Sign Up Teacher"
+    "Registrar docente" : "Sign Up Teacher",
+
+    "Marca la asistencia de tus clases desde aquí!": "Mark attendance for your classes from here!",
+    "Home" : "Home",
+    "Perfil": "Profile"
 }
